Minor fixes and table selection changes - Bump up version of material design from 5.0.1 to 5.2.1 (show go to first/last page buttons) - Fix pagination on variables page (not setting page size when we transform list of entities locally) - Right align edit variable button - Update how single/multi selection works   - Multi selection enforces changes to single page (we should update this at some point to be supported for local pagination)   - Single selection persists over page changes   - Single selection now does not block top banner or pagination

--- a/src/frontend/app/shared/components/list/list.component.scss
+++ b/src/frontend/app/shared/components/list/list.component.scss
@@ -91,6 +91,7 @@
     }
   }
   &__paginator {
+    height: 67px;
     padding: 4px;
     mat-paginator-container {
       padding: 0;
